fix gap

--- a/src/assets/styles/components/_themepicker.scss
+++ b/src/assets/styles/components/_themepicker.scss
@@ -68,7 +68,7 @@
             border-width: 0 10px 12px 10px;
             border-color: transparent transparent var(--color-primary)
                 transparent;
-            transform: translate(-50%, 1rem);
+            transform: translate(-50%, 1.25rem);
         }
     }
 
